<resources>
    <string name="app_name">InventoryAppStage2</string>
    <string name="editor_activity_name">Add Product</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_product">Add new product</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_name">Product Name: </string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone No.</string>
    <string name="product_details">Product Information</string>
    <string name="product_price">Price</string>
    <string name="price">Price: </string>
    <string name="quantity">Quantity: </string>
    <string name="category_availability">Availability</string>
    <string name="availability_unknown">Unknown</string>
    <string name="availability_yes">In Stock</string>
    <string name="availability_no">Out of Stock</string>
    <string name="database_name">shop.db</string>
    <string name="saving_product_error">Error with saving product</string>
    <string name="product_row_id">Product saved with row id: </string>
    <string name="table_content">The products table contains:\t</string>
    <string name="products">\tproducts.\n\n</string>
    <string name="row_insertion_failed">Insertion is not supported for</string>
    <string name="product_stock">Product Stock</string>
    <string name="product_sale">Sale</string>
    <string name="sale_successful">Sale successful! \nNew quantity of the product </string>
    <string name="remaining_quantity">is: </string>
    <string name="sale_error">Sale can&amp;t be made because </string>
    <string name="no_stock">out of stock!</string>
    <string name="empty_database">Empty database image</string>
    <string name="no_entry_database">The database contains no entries!</string>
    <string name="new_entry_request">In order to add new entry to the database \nplease press the (+) button \non the right end of the screen!</string>
    <string name="edit_the_product">Edit the selected product</string>
    <string name="minus_btn">-</string>
    <string name="plus_btn">+</string>
    <string name="order_button">Order</string>
    <string name="no_field_modification">The fields weren&amp;t modified</string>
    <string name="empty_field_error">This field cannot be empty! Please enter a value!</string>
    <string name="enter_value_into_field">The field must have an entry!</string>
    <string name="save_error">An error occurred while saving the product</string>
    <string name="added_product_message">Product successfully added!</string>
    <string name="update_error">An error occurred while updating the product</string>
    <string name="updated_product_message">Product updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">An error occurred while deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
</resources>
