<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@android:color/black"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@android:color/black"
        android:paddingLeft="@dimen/main_layout_padding"
        android:paddingStart="@dimen/main_layout_padding"
        android:paddingRight="@dimen/main_layout_padding"
        android:paddingEnd="@dimen/main_layout_padding"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/product_name_text_size"
            tools:text="@string/product_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_price"
                    android:textSize="@dimen/price_and_quantity_text_size"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/price"/>

            </LinearLayout>

            <TextView
                android:id="@+id/product_quantity"
                android:gravity="end"
                android:textSize="@dimen/price_and_quantity_text_size"
                android:textColor="@android:color/holo_blue_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/quantity"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/product_stock"
        android:layout_width="@dimen/stock_width"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@android:color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/product_stock_text_size"
        tools:text="@string/product_stock" />

    <Button
        android:id="@+id/sell_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="false"
        android:background="@android:color/holo_blue_light"
        android:text="@string/product_sale"/>

</LinearLayout>