<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vlada.inventoryappstage2.MainActivity">

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_database"
            android:layout_width="@dimen/empty_database_imageview_dimen"
            android:layout_height="@dimen/empty_database_imageview_dimen"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/empty_database"
            android:background="@android:color/holo_red_dark"
            android:src="@android:drawable/stat_notify_error" />

        <TextView
            android:id="@+id/no_entry_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_database"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="@dimen/no_entry_database_padding"
            android:text="@string/no_entry_database"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/new_entry_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_entry_database"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="@dimen/new_entry_request_padding"
            android:text="@string/new_entry_request"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add" />
</RelativeLayout>